--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="indoor">Indoor</string>
     <string name="select_slot">Select Slot</string>
     <string name="advance_search">Advance Search</string>
+    <string name="email">Email Address</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="go_to_signup">Create an account</string>
+    <string name="username">User Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="phone">Phone No</string>
+    <string name="signup">Sign Up</string>
+    <string name="go_to_login">Already have an account</string>
 </resources>
