--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="title_activity_booking_slot">BookingSlotActivity</string>
+    <string name="current_bookings">Current</string>
+    <string name="previous_bookings">Previous</string>
 </resources>
